--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://github.com/ranjitsgill" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2019, Ranjit Gill</p>
     </footer>
