--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header>
-      <img src="images/profileimage.jpg" alt="Drawing of Ranjit Gill" class="profile-image">
+      <img src="images/profileimage.jpg" alt="Avatar picture of Ranjit Gill" class="profile-image">
       <h1 class="tag name">Hello, I’m Ranjit.</h1>
       <p class="tag location">My home is Melbourne, Australia.</p>
     </header>
@@ -25,21 +25,21 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
+        <p>I’m an aspiring web designer, I love technical things, programming is my passion.</p>
         <p>I’ve been a professional concierge who's always interested in expanding my skills.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>I want to become No.1 Web Designer/Developer in Australia</p>
         <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
+          <li>HTML5</li>
+          <li>CSS3</li>
           <li>JavaScript</li>
           <li>Ruby</li>
-          <li>Rails</li>
+          <li>MySql</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
+        <p>I’d like to work for a web design firm helping clients to earn massive incomes through the help of my designed websites.</p>
       </div> 
 
     </main>
