Changes to experinece.html

--- a/experience.html
+++ b/experience.html
@@ -23,6 +23,12 @@
       <h1 class="tag name">Hello, I’m Ranjit.</h1>
       <p class="tag location">My home is Melbourne, Australia.</p>
     </header>
-
+    <main class="flex">
+        <div class="card">
+          <h2>Experience</h2>
+          <p>Client service focused professional concierge with a strong education background in information technology field and over 10 
+              years of experience in client focused industries. </p>
+          
+        </div> 
 </body>
 </html>
