--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li>CSS3</li>
           <li>JavaScript</li>
           <li>Ruby</li>
-          <li>MySql</li>
+          <li>MySQL</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients to earn massive incomes through the help of my designed websites.</p>
       </div> 
