--- a/experience.html
+++ b/experience.html
@@ -30,5 +30,11 @@
               years of experience in client focused industries. </p>
           
         </div> 
+        <footer>
+                <ul>
+                  <li><a href="https://github.com/ranjitsgill" class="social github">Github</a></li>
+                </ul>
+                <p class="copyright">Copyright 2019, Ranjit Gill</p>
+              </footer>
 </body>
 </html>
