Changes to meke pages work together and made a change to profile picture to rotate 360degrees

--- a/experience.html
+++ b/experience.html
@@ -23,13 +23,13 @@
       <h1 class="tag name">Hello, I’m Ranjit.</h1>
       <p class="tag location">My home is Melbourne, Australia.</p>
     </header>
-    <main class="flex">
-        <div class="card">
+    <main class="experience">
+        <div class="card2">
           <h2>Experience</h2>
           <p>Client service focused professional concierge with a strong education background in information technology field and over 10 
               years of experience in client focused industries. </p>
           
-        </div> 
+        </div> </main></br>
         <footer>
                 <ul>
                   <li><a href="https://github.com/ranjitsgill" class="social github">Github</a></li>
