Edit hobbies.html page

--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ranjit Gill's Experience</title>
+    <title>Ranjit Gill's Hobbies</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
 </head>
@@ -26,11 +26,17 @@
     </header>
     <main class="experience">
         <div class="card2">
-          <h2>Experience</h2>
-          <p>Client service focused professional concierge with a strong education background in information technology field and over 10 
-              years of experience in client focused industries. </p>
-          
+          <h2 class="hobbiesh2">Hobbies</h2>
+          <fig></fig>
+          <img src="images/clayshooting.jpg" alt="Picture of clay shooting" class="hobbies">
+          <img src="images/readingbooks.jpg" alt="Picture of a book" class="hobbies">
         </div> </main></br>
+        <h2>Hobbies</h2>
+        <ul>
+          <li>Clay Shooting</li>
+          <li>Reading non-fiction books</li>
+          <li>Horse Riding</li>
+        </ul>
         <footer>
                 <ul>
                   <li><a href="https://github.com/ranjitsgill" class="social github">Github</a></li>
