Correcting errors in experience.html after W3C validation

--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ranjit Gill's Experience</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
 </head>
 <body>
     
@@ -30,7 +30,7 @@
           <p>Client service focused professional concierge with a strong education background in information technology field and over 10 
               years of experience in client focused industries. </p>
           
-        </div> </main></br>
+        </div> </main><br>
         <footer>
                 <ul>
                   <li><a href="https://github.com/ranjitsgill" class="social github">Github</a></li>
