Correcting errors after W3C validation

--- a/hobbies.html
+++ b/hobbies.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ranjit Gill's Hobbies</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
 </head>
 <body>
     
@@ -27,7 +27,6 @@
     <main class="experience">
         <div class="card2">
           <h2 class="hobbiesh2">Hobbies</h2>
-          <fig></fig>
           <img src="images/clayshooting.jpg" alt="Picture of clay shooting" class="hobbies">
           <img src="images/readingbooks.jpg" alt="Picture of a book" class="hobbies">
           <ul>
@@ -35,7 +34,7 @@
             <li>Reading non-fiction books</li>
           </ul>
 
-        </div> </main></br>
+        </div> </main><br>
         <footer>
                 <ul>
                   <li><a href="https://github.com/ranjitsgill" class="social github">Github</a></li>
